<package>
  <name>tractor_teleop</name>
  <version>0.1.0</version>
  <description>
      A simple robot drive system based on Daniel Snider http://wiki.ros.org/simple_drive
      Changed to car-like for tractor.
  </description>
  <maintainer email="matt@rosagriculture.org">Matt Droter</maintainer>
  <author email="danielsnider12@gmail.com">Daniel Snider</author>
  <author email="matthewmirvish@hotmail.com">Matthew Mirvish</author>
  <license>Unlicense</license>
  <url type="website"></url>
  <url type="repository">https://github.com/ros-agriculture/tractor_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
